# quiz-kata-errigok

./: .gitignore  CMakeLists - OLD.txt  CMakeLists.txt  example.json  how-to-compile.txt  valgrind-wsl-cpp.supp
src/: button.cpp  button.hpp  drop_down.cpp  drop_down.hpp  main.cpp  number_text_box.cpp  number_text_box.hpp  question.cpp  question.hpp  radio_button.cpp  radio_button.hpp  scroll_bar.cpp  scroll_bar.hpp
